--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,9 @@
   padding-top: 70px;
   padding-bottom: 50px;
 }
+
+.about{
+  text-align: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
