--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,15 @@
   padding-top: 20px;
   text-align: center;
 }
+
+.design, .development, .pmanagement {
+  display: none;
+}
+.portfolio{
+  text-align: center;
+}
+.portimg{
+  height: 230px;
+  width: auto;
+  padding: 10px;
+}
