--- a/css/main.css
+++ b/css/main.css
@@ -66,3 +66,18 @@
   width: auto;
   padding: 10px;
 }
+
+#text1, #text2, #text3, #text4, #text5, #text6, #text7, #text8 {
+  display: none;
+  position: absolute;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.2);
+  top: 0.3px;
+  bottom:10px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  padding-top: 1rem;
+  padding-left: 1rem;
+}
