--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,22 @@
   padding-top: 1rem;
   padding-left: 1rem;
 }
+
+.contact{
+  background-image: url('../img/backgrounds/c_image.jpg');
+  background-size: cover;
+  text-align: center;
+  color: white;
+  padding: 2rem;
+}
+.form-control{
+  background: transparent;
+  border-bottom:white solid;
+}
+.form-control::placeholder{
+  color: white;
+  opacity: 1;
+}
+.form{
+  justify-content: center;
+}
