--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 }
 
 .serv{
-  background-image: url("../img/backgrounds/s_image.jpg");
+  background-image: url("../images/backgrounds/s_image.jpg");
   height: auto;
   width: auto;
   background-size: cover;
@@ -83,7 +83,7 @@
 }
 
 .contact{
-  background-image: url('../img/backgrounds/c_image.jpg');
+  background-image: url('../images/backgrounds/c_image.jpg');
   background-size: cover;
   text-align: center;
   color: white;
@@ -99,4 +99,28 @@
 }
 .form{
   justify-content: center;
+}
+
+#textarea {
+  height: 250px;
+  padding-bottom: 50px;
+}
+.btn{
+  margin-top: 1rem;
+}
+.footer {
+  padding-top: 40px;
+  align-items: center;
+  align-content: center;
+  padding-left: 200px;
+}
+#img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10 {
+  margin: 10px;
+}
+h2{
+  text-align: center;
+  padding-top: 1rem;
+}
+h3{
+  text-align: center;
 }
